manifests/ingress/ingress-es-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: es-monitoring
  namespace: lab-monitoring
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - es-monitoring.__HOST_IP__.sslip.io
      secretName: es-monitoring-tls
  rules:
    - host: es-monitoring.__HOST_IP__.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-monitoring-es-http
                port:
                  number: 9200
