manifests/ingress/ingress-kibana-main.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-main
  namespace: lab-main
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kibana-main.__HOST_IP__.sslip.io
      secretName: es-main-tls
  rules:
    - host: kibana-main.__HOST_IP__.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-main-kb-http
                port:
                  number: 5601
