manifests/ingress/ingress-kibana-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-monitoring
  namespace: lab-monitoring
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kibana-monitoring.__HOST_IP__.sslip.io
      secretName: es-monitoring-tls
  rules:
    - host: kibana-monitoring.__HOST_IP__.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-monitoring-kb-http
                port:
                  number: 5601
